# greyline

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  flake.nix  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  desktop-compat.yml
.github/workflows/: ci.yml  pages.yml  publish.yml
docs/: CREDITS.md
nix/: hm-module.nix
reference/: calibrate.py  worldtime.cities.js  worldtime.html
systemd/: greyline.service  greyline.timer  thinkpad-wallpaper.service  thinkpad-wallpaper.timer
tests/: test_backends.py  test_cli.py  test_config.py  test_configedit.py  test_geo.py  test_render.py  test_sun.py
web/: config.js  geo.js  index.html  main.js  render.js  sun.js  vectormap.js
worldtime/: __init__.py  __main__.py  config.py  configedit.py  default-config.toml  geo.py  recipes.py  render.py  service.py  sun.py  vectormap.py
worldtime/backends/: __init__.py  _util.py  command.py  hyprpaper.py  sway.py  swww.py  x11.py
