[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "greyline"
version = "0.1.0"
description = "A live, multi-timezone world-time desktop wallpaper for Wayland/X11."
readme = "README.md"
requires-python = ">=3.11"          # tomllib + zoneinfo (stdlib)
license = { text = "GPL-2.0-or-later" }
authors = [{ name = "Jotham Lim Ee Chen" }]
dependencies = ["pillow>=9"]

[project.scripts]
greyline = "worldtime.__main__:main"

[project.urls]
Homepage = "https://github.com/cothinking-dev/greyline"

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools]
packages = ["worldtime", "worldtime.backends"]

[tool.setuptools.package-data]
# Explicit list (not assets/*.png) so locally-present IBM/Lenovo artwork is never packaged.
worldtime = ["assets/tux.png", "default-config.toml", "geodata/*.geojson"]
